<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_property_list"
            android:icon="@drawable/ic_baseline_property"
            android:title="@string/menu_property_list"/>
        <item
            android:id="@+id/nav_property_search"
            android:icon="@drawable/ic_baseline_search"
            android:title="@string/menu_property_search" />
        <item
            android:id="@+id/nav_property_post"
            android:icon="@drawable/ic_baseline_add_box"
            android:title="@string/menu_property_post" />

        <item
            android:id="@+id/nav_rent_applications"
            android:icon="@drawable/ic_baseline_menu"
            android:title="@string/menu_rent_applications"/>

        <item
            android:id="@+id/nav_rental_history"
            android:icon="@drawable/ic_baseline_history"
            android:title="@string/menu_rental_history"/>
    </group>
</menu>