<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_container_md"
    tools:context=".ui.settings.AgencyProfileFragment">

    <TextView
        android:text="@string/field_email"
        android:textSize="@dimen/text_md"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/agency_profile_email"
        android:textSize="@dimen/text_lg"
        android:text="email@email.com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/field_agency_name"
        android:textSize="@dimen/text_md"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_agency_profile_name"
        android:inputType="text"
        android:background="@drawable/edit_text_bg"
        android:minWidth="@dimen/field_min_width"
        android:layout_marginTop="@dimen/margin_xsmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/agency_profile_invalid_name"
        android:text="@string/field_agency_name_invalid"
        android:textColor="@color/dark_danger"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/field_country"
        android:textSize="@dimen/text_md"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/agency_profile_country"
        android:textSize="@dimen/text_lg"
        android:text="Palestine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/field_city"
        android:textSize="@dimen/text_md"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/agency_profile_city"
        android:textSize="@dimen/text_lg"
        android:text="Hebron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/field_phone_number"
        android:textSize="@dimen/text_md"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_agency_profile_phone"
        android:inputType="phone"
        android:background="@drawable/edit_text_bg"
        android:minWidth="@dimen/field_min_width"
        android:layout_marginTop="@dimen/margin_xsmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/agency_profile_invalid_phone"
        android:text="@string/field_phone_invalid"
        android:textColor="@color/dark_danger"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_agency_edit"
        android:text="@string/action_submit"
        android:backgroundTint="@color/main_dark"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>