<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.auth.RentingAgencySignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_agency_email"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/field_email"/>

            <EditText
                android:id="@+id/edit_agency_email"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="@dimen/margin_small"
                android:minWidth="@dimen/field_min_width"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_agency_email_invalid"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="@color/dark_danger"
                android:text="@string/field_email_invalid"
                android:textSize="@dimen/text_sm"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_agency_name"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/field_agency_name"/>

            <EditText
                android:id="@+id/edit_agency_name"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="@dimen/margin_small"
                android:minWidth="@dimen/field_min_width"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_agency_name_invalid"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="@color/dark_danger"
                android:text="@string/field_agency_name_invalid"
                android:textSize="@dimen/text_sm"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_agency_password"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/field_password"/>

            <EditText
                android:id="@+id/edit_agency_password"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="@dimen/margin_small"
                android:minWidth="@dimen/field_min_width"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_agency_password_invalid"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="@color/dark_danger"
                android:text="@string/field_password_invalid"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:textSize="@dimen/text_sm"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_agency_confirm_password"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/field_confirm_password"/>

            <EditText
                android:id="@+id/edit_agency_confirm_password"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="@dimen/margin_small"
                android:minWidth="@dimen/field_min_width"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_agency_confirm_pass_invalid"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="@color/dark_danger"
                android:text="@string/field_confirm_pass_invalid"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:textSize="@dimen/text_sm"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/spinner_agency_country"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/field_country"/>

            <Spinner
                android:id="@+id/spinner_agency_country"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="@dimen/margin_small"
                android:minWidth="@dimen/field_min_width"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/spinner_agency_city"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/field_city"/>

            <Spinner
                android:id="@+id/spinner_agency_city"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="@dimen/margin_small"
                android:minWidth="@dimen/field_min_width"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_agency_phone"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/field_phone_number"/>

            <EditText
                android:id="@+id/edit_agency_phone"
                android:background="@drawable/edit_text_bg"
                android:layout_marginTop="@dimen/margin_small"
                android:minWidth="@dimen/field_min_width"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_agency_phone_invalid"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="@color/dark_danger"
                android:text="@string/field_phone_invalid"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:textSize="@dimen/text_sm"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_agency_submit"
        android:text="@string/action_submit"
        android:backgroundTint="@color/main_dark"
        android:layout_marginTop="@dimen/margin_medium"
        android:minWidth="@dimen/button_min_width_small"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>